--- a/DES/nbproject/private/private.properties
+++ b/DES/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\OSVALDO\\AppData\\Roaming\\NetBeans\\8.0rc1\\build.properties
+user.properties.file=C:\\Users\\Carlos\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
